--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "react-router dev",
 		"build": "react-router build",
-		"start": "react-router-serve ./build/server/index.js",
+		"start": "npx serve build/client -s",
 		"preview": "npx serve build/client -p 3000",
 		"typecheck": "tsc --noEmit"
 	},
@@ -58,6 +58,7 @@
 		"recharts": "^2.12.0",
 		"remark-gfm": "4.0.0",
 		"serialize-error": "^12.0.0",
+		"serve": "^14.2.5",
 		"sonner": "^2.0.3",
 		"stripe": "^18.2.1",
 		"styled-jsx": "^5.1.7",
